# Labs_CPP

2/: CMakeLists.txt
2/cmake/: String.pc.in
2/include/: string.hpp
2/src/: string.cpp
2/tests/: CMakeLists.txt  test.cpp
3/: CMakeLists.txt
3/include/: clock.hpp  electronic_clock.hpp  floor_clock.hpp  mechanical_clock.hpp  smart_watch.hpp  wrist_watch.hpp
3/src/: clock.cpp  electronic_clock.cpp  floor_clock.cpp  main.cpp  mechanical_clock.cpp  smart_watch.cpp  wrist_watch.cpp
4/: CMakeLists.txt
4/include/: array.hpp  error.hpp  iter.hpp
4/src/: main.cpp
